Fix avatar button drifting off screen on portrait mode

--- a/src/app/Navigation.module.scss
+++ b/src/app/Navigation.module.scss
@@ -31,13 +31,16 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-evenly;
-            margin: 0 1em;
+            margin: 0;
         }
+
+        > .sep { margin: 0; }
 
         .navItem {
             width: auto;
             height: 100%;
-            width: 5em;
+            max-width: 5em;
+
             &::after {
                 left: 0;
                 bottom: auto;
